Add datetimepicker plugin

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name="datetime" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите дату и время" value="<%=@datetime%>">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите дату и время" value="<%=@datetime%>">
   </div>
 
   <div class="form-group">
@@ -57,6 +57,10 @@ $(function(){
 
   $('#color').simplecolorpicker();
 
+  $('#datetimepicker').datetimepicker()
+
 });
 
+
 </script>
+
