--- a/views/visit.erb
+++ b/views/visit.erb
@@ -2,21 +2,35 @@
 <p>На этой странице вы можете записаться</p>
 
 
-<form action="/visit" method="POST">
+<script type="text/javascript">
+
+$(function(){
+
+  $('#color').simplecolorpicker();
+
+  $('#datetimepicker').datetimepicker();
+
+});
+
+
+</script>
+
+
+<form action="/visit" method="POST" role="form">
 
   <div class="form-group">
     <label>Ваше имя</label>
-    <input name="username" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите ваше имя" value="<%=@username%>">
+    <input name="username" type="text" class="form-control" placeholder="Введите ваше имя" value="<%=@username%>">
   </div>
 
   <div class="form-group">
     <label>Ваш телефон</label>
-    <input name="phone" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите ваш телефон" value="<%=@phone%>">
+    <input name="phone" type="text" class="form-control" placeholder="Введите ваш телефон" value="<%=@phone%>">
   </div>
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input id="datetimepicker" name="datetime" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите дату и время" value="<%=@datetime%>">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%=@datetime%>">
   </div>
 
   <div class="form-group">
@@ -51,16 +65,5 @@
 
 </form>
 
-<script type="text/javascript">
 
-$(function(){
-
-  $('#color').simplecolorpicker();
-
-  $('#datetimepicker').datetimepicker()
-
-});
-
-
-</script>
 
