--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -1,7 +1,17 @@
 	
-	<%= @results %>
-
 <table class="table">
+	<thead>
+
+		<tr>
+			<th>Имя</th>
+			<th>Телефон</th>
+			<th>Дата записи</th>
+			<th>Парикмахер</th>
+			<th>Цвет</th>
+		</tr>
+	</thead>	
+
+	<body>
 
 	<% @results.each do |row| %>
 		<tr>
@@ -12,6 +22,8 @@
 			<td><%= row ['color']%></td>
 		</tr>
 	<% end %>
+
+	</body>
 
 </table>
 
