--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -11,7 +11,7 @@
 		</tr>
 	</thead>	
 
-	<body>
+	<tbody>
 
 	<% @results.each do |row| %>
 		<tr>
@@ -21,9 +21,9 @@
 			<td><%= row ['barber']%></td>
 			<td><%= row ['color']%></td>
 		</tr>
-	<% end %>
+		<% end %>
 
-	</body>
+	</tbody>
 
 </table>
 
